MINIC/MINIC.output
Grammar

    0 $accept: compile_unit $end

    1 compile_unit: statement ';'
    2             | compile_unit statement ';'
    3             | function_definition ';'
    4             | compile_unit function_definition ';'

    5 function_definition: FUNCTION IDENTIFIER '(' fargs ')' compound_statement

    6 fargs: IDENTIFIER
    7      | fargs IDENTIFIER

    8 statement: expression ';'
    9          | compound_statement
   10          | if_statement
   11          | while_statement
   12          | RETURN expression ';'
   13          | BREAK ';'
   14          | ';'

   15 if_statement: IF '(' expression ')' statement
   16             | IF '(' expression ')' statement ELSE statement

   17 while_statement: WHILE '(' expression ')' statement

   18 compound_statement: '{' '}'
   19                   | '{' statement_list '}'

   20 statement_list: statement
   21               | statement_list statement

   22 expression: NUMBER
   23           | IDENTIFIER
   24           | IDENTIFIER '(' ')'
   25           | IDENTIFIER '(' args ')'
   26           | expression PLUS expression
   27           | expression MINUS expression
   28           | expression MULT expression
   29           | expression DIV expression
   30           | PLUS expression
   31           | MINUS expression
   32           | '(' expression ')'
   33           | IDENTIFIER '=' expression
   34           | expression AND expression
   35           | expression OR expression
   36           | NOT expression
   37           | expression GT expression
   38           | expression GTE expression
   39           | expression LT expression
   40           | expression LTE expression
   41           | expression EQUAL expression
   42           | expression NEQUAL expression

   43 args: expression
   44     | args ',' expression


Terminals, with rules where they appear

$end (0) 0
'(' (40) 5 15 16 17 24 25 32
')' (41) 5 15 16 17 24 25 32
',' (44) 44
';' (59) 1 2 3 4 8 12 13 14
'=' (61) 33
'{' (123) 18 19
'}' (125) 18 19
error (256)
IDENTIFIER (258) 5 6 7 23 24 25 33
NUMBER (259) 22
RETURN (260) 12
BREAK (261) 13
IF (262) 15 16
ELSE (263) 16
WHILE (264) 17
FUNCTION (265) 5
IFPREC (266)
OR (267) 35
AND (268) 34
NEQUAL (269) 42
EQUAL (270) 41
LT (271) 39
LTE (272) 40
GT (273) 37
GTE (274) 38
MINUS (275) 27 31
PLUS (276) 26 30
DIV (277) 29
MULT (278) 28
NOT (279) 36


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
compile_unit (33)
    on left: 1 2 3 4, on right: 0 2 4
function_definition (34)
    on left: 5, on right: 3 4
fargs (35)
    on left: 6 7, on right: 5 7
statement (36)
    on left: 8 9 10 11 12 13 14, on right: 1 2 15 16 17 20 21
if_statement (37)
    on left: 15 16, on right: 10
while_statement (38)
    on left: 17, on right: 11
compound_statement (39)
    on left: 18 19, on right: 5 9
statement_list (40)
    on left: 20 21, on right: 19 21
expression (41)
    on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
    40 41 42, on right: 8 12 15 16 17 26 27 28 29 30 31 32 33 34 35
    36 37 38 39 40 41 42 43 44
args (42)
    on left: 43 44, on right: 25 44


State 0

    0 $accept: . compile_unit $end

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    RETURN      shift, and go to state 3
    BREAK       shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FUNCTION    shift, and go to state 7
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    ';'         shift, and go to state 11
    '('         shift, and go to state 12
    '{'         shift, and go to state 13

    compile_unit         go to state 14
    function_definition  go to state 15
    statement            go to state 16
    if_statement         go to state 17
    while_statement      go to state 18
    compound_statement   go to state 19
    expression           go to state 20


State 1

   23 expression: IDENTIFIER .
   24           | IDENTIFIER . '(' ')'
   25           | IDENTIFIER . '(' args ')'
   33           | IDENTIFIER . '=' expression

    '='  shift, and go to state 21
    '('  shift, and go to state 22

    $default  reduce using rule 23 (expression)


State 2

   22 expression: NUMBER .

    $default  reduce using rule 22 (expression)


State 3

   12 statement: RETURN . expression ';'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 23


State 4

   13 statement: BREAK . ';'

    ';'  shift, and go to state 24


State 5

   15 if_statement: IF . '(' expression ')' statement
   16             | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 25


State 6

   17 while_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 26


State 7

    5 function_definition: FUNCTION . IDENTIFIER '(' fargs ')' compound_statement

    IDENTIFIER  shift, and go to state 27


State 8

   31 expression: MINUS . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 28


State 9

   30 expression: PLUS . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 29


State 10

   36 expression: NOT . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 30


State 11

   14 statement: ';' .

    $default  reduce using rule 14 (statement)


State 12

   32 expression: '(' . expression ')'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 31


State 13

   18 compound_statement: '{' . '}'
   19                   | '{' . statement_list '}'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    RETURN      shift, and go to state 3
    BREAK       shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    ';'         shift, and go to state 11
    '('         shift, and go to state 12
    '{'         shift, and go to state 13
    '}'         shift, and go to state 32

    statement           go to state 33
    if_statement        go to state 17
    while_statement     go to state 18
    compound_statement  go to state 19
    statement_list      go to state 34
    expression          go to state 20


State 14

    0 $accept: compile_unit . $end
    2 compile_unit: compile_unit . statement ';'
    4             | compile_unit . function_definition ';'

    $end        shift, and go to state 35
    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    RETURN      shift, and go to state 3
    BREAK       shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    FUNCTION    shift, and go to state 7
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    ';'         shift, and go to state 11
    '('         shift, and go to state 12
    '{'         shift, and go to state 13

    function_definition  go to state 36
    statement            go to state 37
    if_statement         go to state 17
    while_statement      go to state 18
    compound_statement   go to state 19
    expression           go to state 20


State 15

    3 compile_unit: function_definition . ';'

    ';'  shift, and go to state 38


State 16

    1 compile_unit: statement . ';'

    ';'  shift, and go to state 39


State 17

   10 statement: if_statement .

    $default  reduce using rule 10 (statement)


State 18

   11 statement: while_statement .

    $default  reduce using rule 11 (statement)


State 19

    9 statement: compound_statement .

    $default  reduce using rule 9 (statement)


State 20

    8 statement: expression . ';'
   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    OR      shift, and go to state 40
    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51
    ';'     shift, and go to state 52


State 21

   33 expression: IDENTIFIER '=' . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 53


State 22

   24 expression: IDENTIFIER '(' . ')'
   25           | IDENTIFIER '(' . args ')'

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12
    ')'         shift, and go to state 54

    expression  go to state 55
    args        go to state 56


State 23

   12 statement: RETURN expression . ';'
   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    OR      shift, and go to state 40
    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51
    ';'     shift, and go to state 57


State 24

   13 statement: BREAK ';' .

    $default  reduce using rule 13 (statement)


State 25

   15 if_statement: IF '(' . expression ')' statement
   16             | IF '(' . expression ')' statement ELSE statement

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 58


State 26

   17 while_statement: WHILE '(' . expression ')' statement

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 59


State 27

    5 function_definition: FUNCTION IDENTIFIER . '(' fargs ')' compound_statement

    '('  shift, and go to state 60


State 28

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   31           | MINUS expression .
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    DIV   shift, and go to state 50
    MULT  shift, and go to state 51

    $default  reduce using rule 31 (expression)


State 29

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | PLUS expression .
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    DIV   shift, and go to state 50
    MULT  shift, and go to state 51

    $default  reduce using rule 30 (expression)


State 30

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   34           | expression . AND expression
   35           | expression . OR expression
   36           | NOT expression .
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    $default  reduce using rule 36 (expression)


State 31

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   32           | '(' expression . ')'
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    OR      shift, and go to state 40
    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51
    ')'     shift, and go to state 61


State 32

   18 compound_statement: '{' '}' .

    $default  reduce using rule 18 (compound_statement)


State 33

   20 statement_list: statement .

    $default  reduce using rule 20 (statement_list)


State 34

   19 compound_statement: '{' statement_list . '}'
   21 statement_list: statement_list . statement

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    RETURN      shift, and go to state 3
    BREAK       shift, and go to state 4
    IF          shift, and go to state 5
    WHILE       shift, and go to state 6
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    ';'         shift, and go to state 11
    '('         shift, and go to state 12
    '{'         shift, and go to state 13
    '}'         shift, and go to state 62

    statement           go to state 63
    if_statement        go to state 17
    while_statement     go to state 18
    compound_statement  go to state 19
    expression          go to state 20


State 35

    0 $accept: compile_unit $end .

    $default  accept


State 36

    4 compile_unit: compile_unit function_definition . ';'

    ';'  shift, and go to state 64


State 37

    2 compile_unit: compile_unit statement . ';'

    ';'  shift, and go to state 65


State 38

    3 compile_unit: function_definition ';' .

    $default  reduce using rule 3 (compile_unit)


State 39

    1 compile_unit: statement ';' .

    $default  reduce using rule 1 (compile_unit)


State 40

   35 expression: expression OR . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 66


State 41

   34 expression: expression AND . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 67


State 42

   42 expression: expression NEQUAL . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 68


State 43

   41 expression: expression EQUAL . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 69


State 44

   39 expression: expression LT . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 70


State 45

   40 expression: expression LTE . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 71


State 46

   37 expression: expression GT . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 72


State 47

   38 expression: expression GTE . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 73


State 48

   27 expression: expression MINUS . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 74


State 49

   26 expression: expression PLUS . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 75


State 50

   29 expression: expression DIV . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 76


State 51

   28 expression: expression MULT . expression

    IDENTIFIER  shift, and go to state 1
    NUMBER      shift, and go to state 2
    MINUS       shift, and go to state 8
    PLUS        shift, and go to state 9
    NOT         shift, and go to state 10
    '('         shift, and go to state 12

    expression  go to state 77


State 52

    8 statement: expression ';' .

    $default  reduce using rule 8 (statement)


State 53

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   33           | IDENTIFIER '=' expression .
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    OR      shift, and go to state 40
    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51

    $default  reduce using rule 33 (expression)


State 54

   24 expression: IDENTIFIER '(' ')' .

    $default  reduce using rule 24 (expression)


State 55

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression
   43 args: expression .

    OR      shift, and go to state 40
    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51

    $default  reduce using rule 43 (args)


State 56

   25 expression: IDENTIFIER '(' args . ')'
   44 args: args . ',' expression

    ')'  shift, and go to state 78
    ','  shift, and go to state 79


State 57

   12 statement: RETURN expression ';' .

    $default  reduce using rule 12 (statement)


State 58

   15 if_statement: IF '(' expression . ')' statement
   16             | IF '(' expression . ')' statement ELSE statement
   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    OR      shift, and go to state 40
    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51
    ')'     shift, and go to state 80


State 59

   17 while_statement: WHILE '(' expression . ')' statement
   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    OR      shift, and go to state 40
    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51
    ')'     shift, and go to state 81


State 60

    5 function_definition: FUNCTION IDENTIFIER '(' . fargs ')' compound_statement

    IDENTIFIER  shift, and go to state 82

    fargs  go to state 83


State 61

   32 expression: '(' expression ')' .

    $default  reduce using rule 32 (expression)


State 62

   19 compound_statement: '{' statement_list '}' .

    $default  reduce using rule 19 (compound_statement)


State 63

   21 statement_list: statement_list statement .

    $default  reduce using rule 21 (statement_list)


State 64

    4 compile_unit: compile_unit function_definition ';' .

    $default  reduce using rule 4 (compile_unit)


State 65

    2 compile_unit: compile_unit statement ';' .

    $default  reduce using rule 2 (compile_unit)


State 66

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   34           | expression . AND expression
   35           | expression . OR expression
   35           | expression OR expression .
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    AND     shift, and go to state 41
    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51

    $default  reduce using rule 35 (expression)


State 67

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   34           | expression . AND expression
   34           | expression AND expression .
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    NEQUAL  shift, and go to state 42
    EQUAL   shift, and go to state 43
    LT      shift, and go to state 44
    LTE     shift, and go to state 45
    GT      shift, and go to state 46
    GTE     shift, and go to state 47
    MINUS   shift, and go to state 48
    PLUS    shift, and go to state 49
    DIV     shift, and go to state 50
    MULT    shift, and go to state 51

    $default  reduce using rule 34 (expression)


State 68

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression
   42           | expression NEQUAL expression .

    MINUS  shift, and go to state 48
    PLUS   shift, and go to state 49
    DIV    shift, and go to state 50
    MULT   shift, and go to state 51

    NEQUAL  error (nonassociative)
    EQUAL   error (nonassociative)
    LT      error (nonassociative)
    LTE     error (nonassociative)
    GT      error (nonassociative)
    GTE     error (nonassociative)

    $default  reduce using rule 42 (expression)


State 69

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   41           | expression EQUAL expression .
   42           | expression . NEQUAL expression

    MINUS  shift, and go to state 48
    PLUS   shift, and go to state 49
    DIV    shift, and go to state 50
    MULT   shift, and go to state 51

    NEQUAL  error (nonassociative)
    EQUAL   error (nonassociative)
    LT      error (nonassociative)
    LTE     error (nonassociative)
    GT      error (nonassociative)
    GTE     error (nonassociative)

    $default  reduce using rule 41 (expression)


State 70

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   39           | expression LT expression .
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    MINUS  shift, and go to state 48
    PLUS   shift, and go to state 49
    DIV    shift, and go to state 50
    MULT   shift, and go to state 51

    NEQUAL  error (nonassociative)
    EQUAL   error (nonassociative)
    LT      error (nonassociative)
    LTE     error (nonassociative)
    GT      error (nonassociative)
    GTE     error (nonassociative)

    $default  reduce using rule 39 (expression)


State 71

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   40           | expression LTE expression .
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    MINUS  shift, and go to state 48
    PLUS   shift, and go to state 49
    DIV    shift, and go to state 50
    MULT   shift, and go to state 51

    NEQUAL  error (nonassociative)
    EQUAL   error (nonassociative)
    LT      error (nonassociative)
    LTE     error (nonassociative)
    GT      error (nonassociative)
    GTE     error (nonassociative)

    $default  reduce using rule 40 (expression)


State 72

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   37           | expression GT expression .
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    MINUS  shift, and go to state 48
    PLUS   shift, and go to state 49
    DIV    shift, and go to state 50
    MULT   shift, and go to state 51

    NEQUAL  error (nonassociative)
    EQUAL   error (nonassociative)
    LT      error (nonassociative)
    LTE     error (nonassociative)
    GT      error (nonassociative)
    GTE     error (nonassociative)

    $default  reduce using rule 37 (expression)


State 73

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   38           | expression GTE expression .
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    MINUS  shift, and go to state 48
    PLUS   shift, and go to state 49
    DIV    shift, and go to state 50
    MULT   shift, and go to state 51

    NEQUAL  error (nonassociative)
    EQUAL   error (nonassociative)
    LT      error (nonassociative)
    LTE     error (nonassociative)
    GT      error (nonassociative)
    GTE     error (nonassociative)

    $default  reduce using rule 38 (expression)


State 74

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   27           | expression MINUS expression .
   28           | expression . MULT expression
   29           | expression . DIV expression
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    DIV   shift, and go to state 50
    MULT  shift, and go to state 51

    $default  reduce using rule 27 (expression)


State 75

   26 expression: expression . PLUS expression
   26           | expression PLUS expression .
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    DIV   shift, and go to state 50
    MULT  shift, and go to state 51

    $default  reduce using rule 26 (expression)


State 76

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   29           | expression DIV expression .
   34           | expression . AND expression
   35           | expression . OR expression
   37           | expression . GT expression
   38           | expression . GTE expression
   39           | expression . LT expression
   40           | expression . LTE expression
   41           | expression . EQUAL expression
   42           | expression . NEQUAL expression

    $default  reduce using rule 29 (expression)


State 77
